--- a/etc/rbup/storage1.conf
+++ b/etc/rbup/storage1.conf
@@ -1,8 +1,19 @@
-# File: /etc/rbup/rbup.conf
-# Hierarchy of precedence, and the last defined option being used.
-# conffile (default is /etc/rbup/rbup.conf)
-# command line environment
-# flags given to rbup.sh
+# File: /etc/rbup/storage1.conf
+# Author:
+# Startdate: 2017-05-20 19:33
+# Title: Rbup conf file for storage1 main backup
+# Purpose: To define the default backup job
+# History: 
+# Usage: /usr/bin/rbup -c /etc/rbup/rbup.conf
+#    Hierarchy of precendence, with first item being the one used for a variable:
+#    1. Flags given on the command line
+#    2. Command line environment
+#    3. Config file passed via -c /etc/rbup/example.conf
+#    4. Default config: /etc/rbup/rbup.conf
+# Reference:
+# Improve:
+# Document: Below this line
+
 RBUP_NOW="$( date "+%Y-%m-%dT%H%M%S" )"
 RBUP_SYNC_CMD=/bin/rsync
 RBUP_SYNC_OPTS="-rlptgoDEA"
@@ -19,10 +30,10 @@ RBUP_LOG_DIR=/var/log/rbup
 #if true, will use the SYNC_OPT_NOT_APPLY option
 RBUP_ENABLED=yes
 
-RBUP_VERBOSE=yes # can be overridden by the -v/-q flag or by the job options
+RBUP_VERBOSE=yes
 
 # JOB SPECIFIC VALUES
-RBUP_JOB_NAME="mainbackup"
+RBUP_JOB_NAME="storage1"
 RBUP_SOURCE=/var/storage1/shares
 RBUP_CHECKSUM_COUNT=1
 RBUP_CHECKSUM_1_FILE="/var/storage1/shares/public/Age Of Empires/Installing-AoFE-on-Linux 2016-01-29.odt"
