added RBUP_MOUNT_POINT; also some extra debugging

--- a/etc/rbup/rbup.conf
+++ b/etc/rbup/rbup.conf
@@ -45,6 +45,9 @@ RBUP_VERBOSE=yes
 #RBUP_DEST_MOUNT_CMD="mount nas1:/volume1/share /mnt/nas1/"
 #RBUP_DEST_UMOUNT_CMD="umount -l /mnt/nas1/"
 
+# RBUP_MOUNT_POINT: where to check to confirm mount finished
+#RBUP_MOUNT_POINT=/mnt/nas1/
+
 # RBUP_DEST: destination of the sync
 #RBUP_DEST=/mnt/nas1/
 
