--- a/etc/rbup/storage1.conf
+++ b/etc/rbup/storage1.conf
@@ -21,8 +21,10 @@ RBUP_SYNC_OPT_VERBOSE="-v"
 RBUP_SYNC_OPT_NOT_VERBOSE=""
 RBUP_SYNC_OPT_APPLY=""
 RBUP_SYNC_OPT_NOT_APPLY="-n"
-RBUP_DEST_MOUNT_CMD="mount jonathan:/volume1/sword /mnt/jonathan/"
-RBUP_DEST_UMOUNT_CMD="umount -l /mnt/jonathan/"
+RBUP_DEST_MOUNT_CMD="mount jonathan:/volume1/sword /mnt/jonathan"
+RBUP_DEST_UMOUNT_CMD="umount -l /mnt/jonathan"
+RBUP_MOUNT_POINT=/mnt/jonathan
+
 RBUP_DEST=/mnt/jonathan
 RBUP_LOG_DIR=/var/log/rbup
 
